<resources>
    <string name="app_name">AnimeView</string>
    <string name="top_fragment_title">Рейтинги</string>
    <string name="recommendation_fragment_title">Рекомендации</string>
    <string name="favorite_fragment_title">Любимое</string>
    <string name="search_title">Поиск</string>

    <string name="airing_title">Онгоинги</string>
    <string name="upcoming_title">Анонсы</string>
    <string name="bypopularity_title">По популярности</string>
    <string name="favorite_title">Лучшие оценки</string>
    <string name="animeimage_content_discript">animeImage</string>
    <string name="user_photo_content_discript">user photo</string>
    <string name="user_recommendation_titile">Рекомендации пользователей:</string>
    <string name="spoilers">Спойлеры</string>

    <string name="random_anime_button_title">Случайное аниме</string>
    <string name="schedules_button_title">Расписание</string>
    <string name="charecters_button_title">Персонажи</string>
    <string name="magazines_button_title">Журналы</string>
    <string name="reviews_title">Обзоры дня</string>
    <string name="more_button_text">Еще</string>
    <string name="hide_button_text">Скрыть</string>
    <string name="anime_toolbar_title">Загрузка…</string>

    <string name="no_synopsys">Нет описания</string>

    <string name="ok">Ок</string>
    <string name="errorTitle">Ошибка</string>
    <string name="errorInternet">Проверьте ваше интернет соединение</string>

    <string name="episodes">эп</string>
    <string name="synopsys_title">Описание</string>
    <string name="raiting_titile">Рейтинг</string>

    <string name="voice_text">Голосов -</string>
    <string name="likes">лайков</string>
    <string name="in">В</string>
    <string name="user_list">списках</string>
    <string name="popularity">По популярности: </string>
    <string name="trailer_title">Трейлер</string>
    <string name="music_title">Музыка</string>

    <string name="openings">Опенинги:</string>
    <string name="endings">Эндинги:</string>
    <string name="theme_text">Темы</string>
    <string name="anime_dont_have_themes">У произведения нет тем!</string>
    <string name="anime_empty_openings">Нет опенингов!</string>
    <string name="no_studios">Нет информации</string>
    <string name="related_title">Связанное</string>
    <string name="date_title">Даты</string>

    <string name="related_fragment_title">Связанное</string>
    <string name="statistic_titile">Статистика</string>

    <string name="watching">Смотрят</string>
    <string name="completed">Просмотроенно</string>
    <string name="onHold">Пауза</string>
    <string name="dropped">Брошено</string>
    <string name="planToWatch">Планируется</string>
    <string name="news">Новости</string>
    <string name="characters">Персонажи</string>
    <string name="comments">Обзоры</string>

    <string name="empty_comment">На данное произведение еще нет обзоров</string>

    <string name="no_characters_info">Не удалось получить информацию о персонажах произведения</string>
    <string name="name_search">Название</string>

    <string name="search_et_type">Тип</string>
    <string name="tv">ТВ</string>
    <string name="movie">Фильм</string>
    <string name="ova">OVA</string>
    <string name="special">Специальные</string>
    <string name="none">Любой</string>

    <string name="search_et_status">Статус</string>
    <string name="airing">Онгоинги</string>
    <string name="complete">Законченные</string>
    <string name="upcoming">Анонсы</string>

    <string name="age_rating">Возрастной рейтинг</string>
    <string name="sfw">SFW?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>

    <string name="sort_by">Соритровать по</string>
    <string name="title_sort">По заголовку</string>
    <string name="date_sort">По дате</string>
    <string name="episodes_sort">По эпизодам</string>
    <string name="score_sort">По оценкам</string>
    <string name="rank_sort">По рейтингу</string>
    <string name="popylarity_sort">По популярности</string>

    <string name="sort_type">Тип сортировки</string>
    <string name="desc">По убыванию</string>
    <string name="asc">По возрастанию</string>
    <string name="find">Найти</string>

    <string name="G">G</string>
    <string name="PG">PG</string>
    <string name="PG13">PG13</string>
    <string name="R17">R17</string>
    <string name="R">R</string>
    <string name="RX">RX</string>
    <string name="content_discription">Текстовое поле</string>
    <string name="filters">Фильтры</string>
    <string name="search_history">История поиска</string>

    <string name="choseGenre">Выберите жанры</string>
    <string name="Genres">Жанры</string>
    <string name="All">Все</string>
    <string name="add">Добавить</string>

    <array name="initial_slider_values">
        <item>0</item>
        <item>10</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_result_label">Результаты поиска</string>
    <string name="not_found_text">Не удалось ничего найти. Попробуйте изменить фильтры.</string>
    <string name="error_loading">Ошибка интернет соединения, повторите попытку позже.</string>
    <string name="retry">Повторить</string>
    <string name="add_genre">Добавить жанры</string>
    <string name="regustration">Регистрация</string>
    <string name="Login">Почта</string>
    <string name="Password">Пароль</string>
    <string name="Paswword_repeat">Повторите пароль</string>
    <string name="Register">Зарегистрироваться</string>
    <string name="alredy_have_acccount">Уже есть аккаунт? <u>Войти</u>. </string>
    <string name="registration_hint_u">Еще нет аккаунта? <u>Зарегистрироваться</u></string>
    <string name="log_in">Войти</string>
    <string name="sing_in_hint">Войдите или зарегистрируйтесь для доступа к вашим данным.</string>
    <string name="Registration_label">Регистрация</string>
    <string name="Registration_login">Вход</string>

    <string name="errorPasswordNotConsists">Пароли не совпадают</string>
    <string name="errorPasswordShort">Пароль должен быть длиннее 6 символов</string>
    <string name="registerSuccsesful">Новый аккаунт зарегистрирован!</string>
    <string name="singInSuccsesful">Вы вошли в свой аккаунт!</string>
    <string name="errorEmptyMail">Почта не может быть пустой</string>
    <string name="need_email_verif">Требуется подтверждение электронной почты</string>
    <string name="settings">Настройки</string>
    <string name="account">Аккаунт</string>

    <string name="mailVerifSend">Письмо отправлено на вашу почту</string>
    <string name="errorMailVerifSend">Не удалось отправить письмо на вашу почту</string>
    <string name="account_settings_title">Настройки</string>
    <string name="sing_out">Выйти</string>
    <string name="fragment_account_settings_title">Настройки</string>

    <string name="exit_dialog_title">Выйти из аккаунта?</string>
    <string name="exit_dialog_text">Вы уверены что хотите выйти из аккаунта?</string>
    <string name="resetEmail">Письмо для сброса пароля отправлено</string>
    <string name="error">Ошибка</string>
    <string name="dont_remember_password">Забыли пароль? <u>Сбросить</u></string>
    <string name="inFavorite">В любимое</string>
    <string name="remove">Удалить</string>
    <string name="night">Темная</string>
    <string name="day">Светлая</string>
    <string name="system">Тема устройства</string>
    <string name="language">Язык</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>
    <string name="system_language">Системный</string>
    <string name="types_of_anime_categoryes">Типы топов</string>
    <string name="errorUnknown">Неизвестная ошибка</string>
    <string name="theme">Тема</string>
    <string name="empty_relations">Связанные с данным произведением работы отсутствуют!</string>
    <string name="account_setting">Настройки акканута</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="hint_dont_have_favorite">У вас нет любимых произведений!</string>
</resources>